search detail done

--- a/client/src/containers/tags.css
+++ b/client/src/containers/tags.css
@@ -3,7 +3,7 @@
     display: inline-flex;
     margin: 0 auto;
     padding: 5px;
-    width: 600px;
+    width:100%;
     font-size: 14px;
     border: #cecece solid 1px;
     border-radius: 3px;
